--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,9 @@
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
+    <span>{{ site.tagline }}</span>
     {%- if titles_size > 0 -%}
-      <nav class="site-nav">
+      <!--<nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -17,8 +18,8 @@
           </span>
         </label>
 
-        <span>{{ site.tagline }}</span>
-        <!--<div class="trigger">
+        
+        <div class="trigger">
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
