--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-    <div class="site-nav">{{ site.tagline }}</div>
+    <div class="site-tagline">{{ site.tagline }}</div>
     {%- if titles_size > 0 -%}
       <!--<nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
