--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,9 +4,11 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <div class="display:table-row-group;">
+      <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    </div>
 
-    <div>{{ site.tagline }}</div>
+    <div class="site-tagline">{{ site.tagline }}</div>
     {%- if titles_size > 0 -%}
       <!--<nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
