--- a/_includes/onedriveplayer.html
+++ b/_includes/onedriveplayer.html
@@ -5,6 +5,6 @@
       src="https://onedrive.live.com/embed?{{ include.id }}"
       frameborder="0"
       scrolling="no"
-      allowfullscreen>
+      allowfullscreen="allowfullscreen">
   </iframe>
 </div>
