--- a/_includes/onedriveplayer.html
+++ b/_includes/onedriveplayer.html
@@ -1,10 +1,10 @@
 <div class="embed-container">
   <iframe
+      src="https://onedrive.live.com/embed?{{ include.id }}"
       width="640"
       height="480"
-      src="https://onedrive.live.com/embed?{{ include.id }}"
       frameborder="0"
       scrolling="no"
-      allowfullscreen="allowfullscreen">
+      allowfullscreen>
   </iframe>
 </div>
