--- a/_includes/onedriveplayer.html
+++ b/_includes/onedriveplayer.html
@@ -1,5 +1,5 @@
 <div class="embed-container">
-  <video controls controlsList="nodownload" width="640" height="480">
+  <video controls controlsList="nodownload" width="{{ include.w }}" height="{{ include.h }}">
     <source src="https://onedrive.live.com/download?{{ include.id }}" type="video/mp4" />
       Your browser does not support the video tag.
   </video>
