--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,9 @@
             {%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {%- endif -%}
+            {%- if site.twitter -%}
+            <li>Twitter: <a class="u-email" href="https://twitter.com/{{ site.twitter }}">{{ site.twitter }}</a></li>
+            {%- endif -%}
         </ul>
       </div>
 
