--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {%- endif -%}
             {%- if site.twitter -%}
-            <li>Twitter: <a class="u-email" href="https://twitter.com/{{ site.twitter }}">{{ site.twitter }}</a></li>
+            <li>Twitter: <a class="u-email" href="https://twitter.com/{{ site.twitter }}">@{{ site.twitter }}</a></li>
             {%- endif -%}
         </ul>
       </div>
