--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {%- endif -%}
             {%- if site.twitter_handle -%}
-            <li>Twitter: <a class="u-email" href="https://twitter.com/{{ site.twitter_handle }}">@{{ site.twitter_handle }}</a></li>
+            <li>Twitter: <a class="u-email" href="https://twitter.com/{{ site.twitter_handle }}" target="_blank">@{{ site.twitter_handle }}</a></li>
             {%- endif -%}
         </ul>
       </div>
